--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".ui.registration.LoginActivity">
 
     <ImageView
         android:id="@+id/iv_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,9 +22,9 @@
         android:layout_width="0dp"
         android:layout_height="56dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="21dp"
         android:layout_marginEnd="20dp"
-        android:background="@drawable/rectangle_gray_radius_10"
+        android:background="@drawable/rectangle_gray_10"
         android:drawableLeft="@drawable/ic_user"
         android:drawablePadding="10dp"
         android:hint="@string/email"
@@ -37,8 +39,8 @@
         android:id="@+id/et_pw"
         android:layout_width="0dp"
         android:layout_height="56dp"
-        android:layout_marginTop="26dp"
-        android:background="@drawable/rectangle_gray_radius_10"
+        android:layout_marginTop="14dp"
+        android:background="@drawable/rectangle_gray_10"
         android:drawableLeft="@drawable/ic_lock"
         android:drawablePadding="10dp"
         android:hint="@string/pw"
@@ -53,8 +55,8 @@
         android:id="@+id/btn_login"
         android:layout_width="0dp"
         android:layout_height="54dp"
-        android:layout_marginTop="36dp"
-        android:background="@drawable/rectangle_orange_radius_20"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/rectangle_pink_10"
         android:text="@string/login"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/et_pw"
@@ -62,39 +64,28 @@
         app:layout_constraintTop_toBottomOf="@+id/et_pw" />
 
     <TextView
-        android:id="@+id/tv_member_yet"
-        android:layout_width="wrap_content"
+        android:id="@+id/textView2"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="33dp"
-        android:text="@string/login_member_yet"
+        android:layout_marginEnd="2dp"
+        android:gravity="end"
+        android:text="SeeMeet"
         android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/tv_register"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
+        app:layout_constraintTop_toTopOf="@+id/tv_register" />
 
     <TextView
         android:id="@+id/tv_register"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="40dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginBottom="251dp"
         android:text="@string/login_register"
         android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/tv_member_yet"
-        app:layout_constraintTop_toTopOf="@+id/tv_member_yet" />
-
-    <TextView
-        android:id="@+id/tv_search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/login_search"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_member_yet" />
+        app:layout_constraintStart_toEndOf="@+id/textView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
