--- a/app/src/main/res/layout/fragment_first_apply.xml
+++ b/app/src/main/res/layout/fragment_first_apply.xml
@@ -45,18 +45,67 @@
         android:textStyle="normal"
         app:layout_constraintStart_toEndOf="@+id/apply_friend"
         app:layout_constraintTop_toTopOf="@+id/apply_friend" />
+<!--
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <TextView
         android:id="@+id/lay"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:background="@drawable/selector_apply_search"
+        android:completionThreshold="1"
+        android:drawableLeft="@drawable/ic_search_black"
+        android:drawablePadding="14dp"
+        android:enabled="false"
+        android:fontFamily="@font/spoqa_han_sans_neo_medium"
+        android:gravity="center_vertical"
+        android:hint="받는 사람 :"
+        android:maxLines="1"
+        android:paddingStart="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/apply_apply"
-        app:layout_constraintTop_toBottomOf="@id/apply_pick">
+        app:layout_constraintTop_toBottomOf="@id/apply_pick" />
 
+    <com.google.android.flexbox.FlexboxLayout
+        android:id="@+id/flex_box_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginStart="50dp"
+        app:alignContent="stretch"
+        app:alignItems="stretch"
+        app:flexWrap="wrap"
+        app:layout_constraintBottom_toBottomOf="@+id/lay"
+        app:layout_constraintStart_toStartOf="@+id/lay"
+        app:layout_constraintTop_toTopOf="@+id/lay">
+
+        <AutoCompleteTextView
+            android:id="@+id/auto_et_to_who"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:completionThreshold="1"
+            android:drawablePadding="14dp"
+            android:fontFamily="@font/spoqa_han_sans_neo_medium"
+            android:gravity="center_vertical"
+            android:imeOptions="actionDone"
+            android:inputType="text|textCapWords|textPersonName"
+            android:maxLines="1"
+            android:paddingStart="8dp"
+            android:singleLine="true"
+            android:background="@android:color/transparent"
+            android:textColorHint="#a3a3a3"
+            android:textSize="14sp"
+            android:textStyle="normal"
+            app:layout_constraintEnd_toEndOf="parent"
+
+
+            app:layout_constraintStart_toStartOf="@id/lay"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_flexGrow="1" />
+
+    </com.google.android.flexbox.FlexboxLayout>
+    -->
+        <!--
         <com.google.android.flexbox.FlexboxLayout
             android:id="@+id/flex_box_layout"
             android:layout_width="0dp"
@@ -95,19 +144,106 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_flexGrow="1" />
 
-            <!--
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/chip_group"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            app:layout_constraintStart_toStartOf="@id/flex_box_layout"
-            app:layout_constraintTop_toTopOf="@+id/auto_et_to_who">
-
-        </com.google.android.material.chip.ChipGroup>
-        -->
         </com.google.android.flexbox.FlexboxLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        -->
+<!--
+    <com.google.android.flexbox.FlexboxLayout
+        android:id="@+id/flex_box_layout"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        app:alignContent="stretch"
+        app:alignItems="stretch"
+        app:flexWrap="wrap"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/apply_pick">
 
+        <AutoCompleteTextView
+            android:id="@+id/auto_et_to_who"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:background="@drawable/selector_apply_search"
+            android:completionThreshold="1"
+            android:drawableLeft="@drawable/ic_search_black"
+            android:drawablePadding="14dp"
+            android:fontFamily="@font/spoqa_han_sans_neo_medium"
+            android:gravity="center_vertical"
+            android:hint="받는 사람 :"
+            android:imeOptions="actionDone"
+            android:inputType="text|textCapWords|textPersonName"
+            android:maxLines="1"
+            android:paddingStart="8dp"
+            android:singleLine="true"
+
+            android:textColorHint="#a3a3a3"
+            android:textSize="14sp"
+            android:textStyle="normal"
+            app:layout_constraintEnd_toEndOf="parent"
+
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_flexGrow="1" />
+
+    </com.google.android.flexbox.FlexboxLayout>
+-->
+
+
+    <AutoCompleteTextView
+        android:id="@+id/auto_et_to_who"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/selector_apply_search"
+        android:completionThreshold="1"
+        android:fontFamily="@font/spoqa_han_sans_neo_medium"
+        android:gravity="center_vertical"
+        android:imeOptions="actionDone"
+        android:inputType="text|textCapWords|textPersonName"
+
+        android:maxLines="1"
+        android:paddingLeft="46dp"
+        android:singleLine="true"
+        android:textColorHint="#a3a3a3"
+
+
+        android:textSize="14sp"
+        android:textStyle="normal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/apply_apply"
+        app:layout_constraintTop_toBottomOf="@+id/apply_pick"/>
+
+
+    <ImageView
+        android:id="@+id/iv_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:src="@drawable/ic_search_black"
+        app:layout_constraintBottom_toBottomOf="@+id/auto_et_to_who"
+        app:layout_constraintStart_toStartOf="@+id/auto_et_to_who"
+        app:layout_constraintTop_toTopOf="@+id/auto_et_to_who" />
+
+    <TextView
+        android:id="@+id/tv_who"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:text="받는 사람 :"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_search"
+        app:layout_constraintStart_toEndOf="@+id/iv_search"
+        app:layout_constraintTop_toTopOf="@+id/iv_search" />
+
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/chipGroup"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/auto_et_to_who"
+        app:layout_constraintEnd_toEndOf="@+id/auto_et_to_who"
+        app:layout_constraintStart_toEndOf="@+id/iv_search"
+        app:layout_constraintStart_toStartOf="@+id/tv_who"
+        app:layout_constraintTop_toTopOf="@+id/auto_et_to_who" />
 
     <TextView
         android:id="@+id/apply_appointment"
@@ -120,7 +256,7 @@
         android:textSize="18sp"
         android:textColor="#1c1c1c"
         app:layout_constraintStart_toStartOf="@+id/apply_apply"
-        app:layout_constraintTop_toBottomOf="@+id/lay" />
+        app:layout_constraintTop_toBottomOf="@+id/auto_et_to_who" />
 
     <TextView
         android:id="@+id/apply_content"
