--- a/app/src/main/res/layout/activity_add_friend.xml
+++ b/app/src/main/res/layout/activity_add_friend.xml
@@ -58,7 +58,7 @@
         android:textSize="14sp"
         android:inputType="text"
         android:maxLines="1"
-        android:imeOptions="actionSearch"
+        android:imeOptions="actionDone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cl_friend_add_top_bar" />
@@ -85,13 +85,74 @@
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_friend_search_list"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="9dp"
             android:layout_marginTop="35dp"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/et_search_friend_id" />
+            app:layout_constraintTop_toBottomOf="@id/et_search_friend_id" >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/iv_search_profile_image"
+            android:layout_marginVertical="13dp"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/ic_launcher_background" />
+
+            <TextView
+                android:id="@+id/tv_search_friend_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="18dp"
+                android:fontFamily="@font/spoqa_han_sans_neo_medium"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintStart_toEndOf="@id/iv_search_profile_image"
+                app:layout_constraintTop_toTopOf="@+id/iv_search_profile_image"
+                tools:text="김준희" />
+
+            <TextView
+                android:id="@+id/tv_search_friend_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:fontFamily="@font/spoqa_han_sans_neo_regular"
+                android:textColor="@color/gray04"
+                android:textSize="13sp"
+                app:layout_constraintBottom_toBottomOf="@+id/iv_search_profile_image"
+                app:layout_constraintStart_toStartOf="@+id/tv_search_friend_name"
+                app:layout_constraintTop_toBottomOf="@id/tv_search_friend_name"
+                tools:text="joon13579@sookmyung.ac.kr" />
+
+        <ImageView
+            android:id="@+id/iv_add_friend_list"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/selector_add_friend" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/tv_search_friend_null"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="35dp"
+            android:fontFamily="@font/spoqa_han_sans_neo_regular"
+            android:textColor="@color/gray04"
+            android:textSize="16sp"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/et_search_friend_id"
+            tools:text="검색 결과가 없습니다." />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
